# itc-530-scientific-computing

./: .bashrc  .gitignore  CMakeLists.txt  NOTE_TO_GRADER.txt  README.md  WaveOrthotope.hpp  analyze.sh  binary_io.hpp  compile_gpu.txt  cpp-optimization.txt  energize.sh  execute-wave-tests.sh  main  main.cpp  makefile  optimize.cpp  out.wo  perf.sh  serial_debug  submit.sh  wave_orthotope.hpp  wave_orthotope_mpi.hpp  wavesolve  wavesolve.cpp  wavesolve_gpu.cpp  wavesolve_mpi.cpp  wavesolve_openmp.cpp  wavesolve_serial.cpp  wavesolve_thread.cpp  wavesolvethreaded.hpp
phase1/: CMakeLists.txt  Makefile  main  main.cpp  wave_orthotope.cpp  wave_orthotope.hpp
src/: Makefile  binary_io.hpp  main_serial.cpp  wave_orthotope.cpp  wave_orthotope.hpp
wavefiles/1D/: 1d-small-in.wo  1d-small-out.wo  1d-tiny-in.wo  1d-tiny-out.wo
wavefiles/2D/: 2d-small-in.wo  2d-small-out.wo  2d-tiny-in.wo  2d-tiny-out.wo
wavefiles/3D/: 3d-small-in.wo  3d-small-out.wo  3d-tiny-in.wo  3d-tiny-out.wo
wavefiles/4D/: 4d-small-in.wo  4d-small-out.wo  4d-tiny-in.wo  4d-tiny-out.wo
wavefiles/5D/: 5d-small-in.wo  5d-small-out.wo
wavefiles/6D/: 6d-small-in.wo  6d-small-out.wo
wavefiles/7D/: 7d-small-in.wo  7d-small-out.wo
wavefiles/8D/: 8d-small-in.wo  8d-small-out.wo
