cmake_minimum_required(VERSION 3.20)
project(wavesolve CXX)
find_package(OpenMP REQUIRED)
find_package(MPI)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS FALSE)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
set(CMAKE_CXX_FLAGS_RELEASE "-Ofast -DNDEBUG" CACHE STRING "Flags used by the CXX compiler during RELEASE builds")

if(MPI_CXX_FOUND)
    find_package(mpl REQUIRED)
    add_executable(wavesolve_mpi wavesolve_mpi.cpp binary_io.hpp wave_orthotope.hpp)
    target_link_libraries(wavesolve_mpi PRIVATE MPI::MPI_CXX)
    target_link_libraries(wavesolve_mpi PRIVATE mpl::mpl)
endif()

add_executable(wavesolve_serial wavesolve_serial.cpp binary_io.hpp wave_orthotope.hpp)
add_executable(wavesolve_openmp wavesolve_openmp.cpp binary_io.hpp wave_orthotope.hpp)
target_link_libraries(wavesolve_openmp PRIVATE OpenMP::OpenMP_CXX)
add_executable(optimize optimize.cpp)
target_link_libraries(optimize PRIVATE OpenMP::OpenMP_CXX)
